yapay zeka eklendi

--- a/movie_recommendation_ai/movieapp.ipynb
+++ b/movie_recommendation_ai/movieapp.ipynb
@@ -37,19 +37,18 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the movie ID to get recommendations:  2787\n"
+      "Enter the movie ID to get recommendations:  toy story\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recommended movies based on the movie ID: 2787\n",
-      "  - Title: Vampire in Venice (Nosferatu a Venezia) (Nosferatu in Venice) (1986), Genres: Horror\n",
-      "  - Title: Deadtime Stories (1987), Genres: Horror\n",
-      "  - Title: Night of the Living Dead (1990), Genres: Horror\n",
-      "  - Title: Deadgirl (2008), Genres: Horror\n",
-      "  - Title: Paranormal Activity 3 (2011), Genres: Horror\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'toy story'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 162\u001b[0m\n\u001b[0;32m    159\u001b[0m recommender\u001b[38;5;241m.\u001b[39mtrain_model()\n\u001b[0;32m    161\u001b[0m \u001b[38;5;66;03m# Film seçimi ve öneri alma\u001b[39;00m\n\u001b[1;32m--> 162\u001b[0m movie_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the movie ID to get recommendations: \u001b[39m\u001b[38;5;124m\"\u001b[39m))  \u001b[38;5;66;03m# Kullanıcıdan film ID'si al\u001b[39;00m\n\u001b[0;32m    163\u001b[0m recommender\u001b[38;5;241m.\u001b[39mrecommend_based_on_movie(movie_id)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'toy story'"
      ]
     }
    ],
